--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@
 }
 
 .blue-gradient-bg {
-  background: linear-gradient(to bottom, #000000, #0f172a, #062f4a, #7fa0b9);
+  background: linear-gradient(to bottom,  #8a030a, #77298f,#0f172a, #000000);
 }
 
 .snake-svg {
